--- a/hollywood.html
+++ b/hollywood.html
@@ -109,7 +109,7 @@
         </div>
         <div class="movies">
           <a href=""><img src="Stranger things.jpg" class="movie"></a>
-          <a href="" class="trendmovies">Stranger Things | seies</a>
+          <a href="" class="trendmovies">Stranger Things | series</a>
         </div>
 
 </div>
